# optimas

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  Analyze_optimization_results.ipynb  README.md  all_machine_specs.py  legal.txt  license.txt  pyproject.toml  requirements.txt  run_libensemble.py  setup.py  simf.py
.github/workflows/: unix-noax.yml  unix-openmpi.yml  unix.yml
doc/: environment.yaml  make.bat  requirements.txt
doc/source/: conf.py  index.rst
examples/astra/: ASTRA_example.in  analysis_script.py  run_optimization_serial_ASTRA.py
examples/dummy/: run_example.py  template_simulation_script.py
examples/dummy1d/: run_example.py  template_simulation_script.py  varying_parameters.py
examples/dummy1d_mf/: mf_parameters.py  template_simulation_script.py
examples/dummy1d_mf_disc/: mf_parameters.py  run_example.py  template_simulation_script.py  varying_parameters.py
examples/dummy_aposmm_libE_gen/: run_example.py  template_simulation_script.py
examples/dummy_ax/: run_example.py  varying_parameters.py
examples/dummy_ax_mf/: mf_parameters.py  run_example.py  template_simulation_script.py  varying_parameters.py
examples/dummy_evenly/: run_example.py
examples/dummy_grid_sampling/: run_example.py  template_simulation_script.py
examples/dummy_grid_search/: run_example.py  varying_parameters.py
examples/dummy_grid_search_single/: run_example.py  template_simulation_script.py  varying_parameters.py
examples/dummy_line_sampling/: run_example.py
examples/dummy_mf/: mf_parameters.py  run_example.py  template_simulation_script.py
examples/dummy_mf_disc/: run_example.py  template_simulation_script.py
examples/dummy_mt/: analysis_script.py  mt_parameters.py  run_example.py  template_simulation_script.py  varying_parameters.py
examples/dummy_random/: run_example.py  template_simulation_script.py
examples/dummy_random_libEgen/: run_example.py
examples/dummy_random_normal/: run_example.py  varying_parameters.py
examples/hipace/: analysis_script.py  run_example.py  template_simulation_script
examples/ionization_injection/: analysis_script.py  run_example.py  template_simulation_script.py  varying_parameters.py
examples/ionization_injection_mf/: analysis_script.py  mf_parameters.py  run_example.py  template_simulation_script.py  varying_parameters.py
examples/libe_aposmm_ibcdfo/: README.md  analysis_script.py  run_example.py  template_simulation_script.py
examples/libe_aposmm_nlopt/: analysis_script.py  bunch_utils.py  check_map_v_unmapped.py  note.txt  run_example.py  template_simulation_script.py
examples/multi_model_mt/: analysis_script.py  bunch_utils.py  custom_fld_diags.py  mt_parameters.py  run_opt.py  template_simulation_script.py  varying_parameters.py
examples/multi_stage/: analysis_script.py  run_example.py  template_simulation_script  template_simulation_script.py  varying_parameters.py
examples/multitask_lpa_fbpic_waket/: analysis_script.py  bunch_utils.py  custom_fld_diags.py  custom_ptcl_diags.py  run_opt.py  (+1 more)
libe_opt/: alloc_functions.py  ax_gen_funcs.py  core.py  dragonfly_gen_funcs.py  ensemble_runner.py  gen_functions.py  persistent_evenly_spaced.py  persistent_gp.py  persistent_gs.py  persistent_sampling.py  post_processing.py  sim_functions.py  utils.py
optimas/: gen_classes.py  gen_functions.py  post_processing.py  sim_functions.py
optimization_folder/: all_machine_specs.py  create_new_optimization.py  gp_alloc_and_gen.py  run_libensemble.py  simf.py  submission_script
sim/: fbpic_script.py
source/: run_libensemble.py  simf.py
submission_scripts/: juwels  lawrencium  lawrencium_1080ti  perlmutter  summit
tests/: run_aposmm_nlopt.py  test_analyzed_parameters.py  test_ax_generators.py  test_ax_model_manager.py  test_chain_evaluator.py  test_comms.py  test_env_script.py  test_evaluation_diagnostics.py  test_exploration_diagnostics.py  test_exploration_resume.py  test_exploration_run_exception.py  test_function_evaluator.py  test_gpu_resources.py  test_grid_sampling.py  test_grid_sampling_mpi.py  test_history_parameters.py  test_libEgen_aposmm.py  test_line_sampling.py  test_manual_exploration.py  test_neldermead.py  test_random_sampling.py  test_template_evaluator.py  test_wandb_logger.py  test_xopt_generators.py
(+158 files in other folders)
