[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'optimas'
description = 'Optimization at scale, powered by libEnsemble'
authors = [
    {name = 'Optimas Developers', email = 'angel.ferran.pousa@desy.de'},
]
readme = 'README.md'
requires-python = '>=3.9'
keywords = ['optimization', 'scale', 'bayesian']
license = {text = 'BSD-3-Clause-LBNL'}
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dependencies = [
    'libensemble >= 1.2',
    'jinja2',
    'pandas',
    'mpi4py',
    'pydantic >= 2.0',
]
dynamic = ['version']

[project.optional-dependencies]
test = [
    'flake8',
    'pytest',
    'ax-platform >= 0.3.4',
    'matplotlib',
]
all = [
    'ax-platform >= 0.3.4',
]

[project.urls]
Documentation = 'https://optimas.readthedocs.io/'

[tool.setuptools.dynamic]
version = {attr = "optimas.__version__"}

[tool.setuptools.packages.find]
include = [
    'optimas',
    'optimas.*',
]

[tool.black]
line-length = 80
target-version = ['py39', 'py310', 'py311']

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D104", "D106", "D107", "D203", "D213"]
