[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'optimas'
description = 'Optimization at scale, powered by libEnsemble'
authors = [
    {name = 'Optimas Developers', email = 'angel.ferran.pousa@desy.de'},
]
readme = 'README.md'
requires-python = '>=3.10'
keywords = ['optimization', 'scale', 'bayesian']
license = {text = 'BSD-3-Clause-LBNL'}
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    'libensemble @ git+https://github.com/Libensemble/libensemble.git@experimental/jlnav_plus_shuds_asktell',
    'jinja2',
    'pandas',
    'mpi4py',
    'pydantic >= 2.0',
]
dynamic = ['version']

[project.optional-dependencies]
test = [
    'flake8',
    'pytest',
    'pytest-mpi',
    'ax-platform >=0.5.0, <1.0.0',
    'matplotlib',
    'nlopt',
]
all = [
    'ax-platform >=0.5.0, <1.0.0',
    'matplotlib',
    'nlopt',
]

[project.urls]
Documentation = 'https://optimas.readthedocs.io/'

[tool.setuptools.dynamic]
version = {attr = "optimas.__version__"}

[tool.setuptools.packages.find]
include = [
    'optimas',
    'optimas.*',
]

[tool.black]
line-length = 80
target-version = ['py310', 'py311', 'py312']

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D104", "D106", "D107", "D203", "D213"]
